# gp1990c.pub.doc

./: Makefile  README.md  configure  configure.ac
docs/: README.md
docs/book/: .directory  Makefile  PUG  agradecimientos.tex  ascii.sty  bib.aux  bib.tex  bu.aux  footerBook.tex  gnuLogo.txt  gpc  headerBook.tex  headerbook.tex.backup  lib.bib  lib.bib.backup  main.aux  main.bbl  main.blg  main.ent  main.idx  main.ilg  main.ind  main.ist  main.lof  main.lot  main.maf  main.mtc11  main.mtc12  main.mtc14  main.mtc15  main.mtc2  main.mtc3  main.mtc4  main.mtc5  main.mtc7  main.mtc9  main.out  main.ptc1  main.ptc2  main.ptc3  (+16 more)
docs/book/algorithms/: generateSymbolicLinks.sh
docs/book/code/: clsgp1990la.y  tokgp1990la.l
docs/book/gnuplot/: generateSymbolicLinks.sh
docs/book/grammars/: generateSymbolicLinks.sh
docs/book/graphics/: generateSymbolicLinks.sh
docs/book/headers/: headerbook.tex.backup  headerbook.tex~  headerbookOld.tex~  headerchapter.tex
docs/book/images/: Blaise_pascal.eps  blaisePascal50pc.eps
docs/book/isoPascal19907185/: iso_pascal_7185.gex  iso_pascal_7185.raw
docs/book/parte1/: Makefile  README.md
docs/book/pictures/: logo-uah.eps
docs/book/programms/: generateSymbolicLinks.sh
docs/book/tabladeSimbolos/: tabladeSimbolos.aux  tabladeSimbolos.tex  tabladeSimbolos.tex~  (+1 more)
slides/main/: Makefile  main.aux  main.djvu  main.dvi  main.nav  main.out  main.ps  main.tex  main.tex.backup  main.toc
web/: Makefile  docs.html  docs.txt  footer.txt  header.txt  index.html  makeHTML.sh  makeWeb.sh  project.html  project.txt
web/css/: styles.css
(+578 files in other folders)
