AC_INIT(myconfig, version-0.1)
AC_PROG_CC
AC_PROG_CXX
# for Flex
AC_PROG_LEX
# for Bison
AC_PROG_YACC

AC_MSG_NOTICE([OK!!! Is you need more information please visit: http://gp1990c.dlucenaplaboratory.com])

AC_CONFIG_FILES([Makefile src/Makefile man/Makefile X/Imakefile])
AC_CONFIG_FILES([autoconf], [chmod +x autoconf])